@@ -129,6 +129,9 @@ Release 2.7.3 - UNRELEASED
     HDFS-9766. TestDataNodeMetrics#testDataNodeTimeSpend fails intermittently.
     (Xiao Chen via aajisaka)
 
+    HDFS-9851. NameNode throws NPE when setPermission is called on a path that
+    does not exist. (Brahma Reddy Battula via aajisaka)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
